-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: core-libs
-
b138
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8183740 | 8u161 | Robert Mckenna | P3 | Resolved | Fixed | b01 |
| JDK-8166789 | 8u152 | Robert Mckenna | P3 | Resolved | Fixed | b01 |
| JDK-8192480 | emb-8u161 | Robert Mckenna | P3 | Resolved | Fixed | b01 |
| JDK-8259459 | 7u301 | Robert Mckenna | P3 | Resolved | Fixed | b01 |
| JDK-8254770 | 7u291 | Robert Mckenna | P3 | Resolved | Fixed | b03 |
| JDK-8255875 | 7u281 | Robert Mckenna | P3 | Resolved | Fixed | b33 |
Prior releases of the JDK would return false when using the tcp ping method where we currently throw an exception with the ERROR_INVALID_COMPUTERNAME (Windows error code 1210) or ERROR_INVALID_NETNAME (1214) errors. We should add these cases to the switch statement for compatibility purposes.
- backported by
-
JDK-8166789 Add invalid network / computer name cases to isReachable known failure switch
-
- Resolved
-
-
JDK-8183740 Add invalid network / computer name cases to isReachable known failure switch
-
- Resolved
-
-
JDK-8192480 Add invalid network / computer name cases to isReachable known failure switch
-
- Resolved
-
-
JDK-8254770 Add invalid network / computer name cases to isReachable known failure switch
-
- Resolved
-
-
JDK-8255875 Add invalid network / computer name cases to isReachable known failure switch
-
- Resolved
-
-
JDK-8259459 Add invalid network / computer name cases to isReachable known failure switch
-
- Resolved
-
- relates to
-
JDK-8254157 InetAddress isReachable returns false for reachable known host
-
- Closed
-