8166747: Add invalid network / computer name cases to isReachable known failure switch

Reviewed-by: chegar, msheppar